# momentum

./: LICENSE  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Attachment.ts  AttachmentType.ts  Priority.ts  Project.ts  Reminder.ts  Task.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  reminder_service.rs  setup.rs  state.rs
src-tauri/src/app/commands/: attachment_commands.rs  mod.rs  project_commands.rs  reminder_commands.rs  settings_commands.rs  task_commands.rs
src-tauri/src/db/models/: task.rs
src-tauri/src/db/queries/: attachment_queries.rs  mod.rs  project_queries.rs  reminder_queries.rs  task_queries.rs
src-tauri/src/domain/: attachment.rs  mod.rs  priority.rs  project.rs  reminder.rs  task.rs
src/app/providers/: AppProvider.tsx
src/app/styles/: globals.css
src/entities/attachment/api/: useAttachments.ts
src/entities/attachment/model/: types.ts
src/entities/attachment/ui/: AttachmentItem.css  AttachmentItem.tsx
src/entities/project/api/: useProjects.ts
src/entities/project/model/: types.ts
src/entities/project/ui/: ProjectListItem.css  ProjectListItem.tsx
src/entities/reminder/api/: useReminders.ts
src/entities/reminder/model/: types.ts
src/entities/reminder/ui/: ReminderItem.css  ReminderItem.tsx
src/entities/task/api/: useTaskById.ts  useTasks.ts
src/entities/task/model/: types.ts
src/entities/task/ui/: TaskItem.css  TaskItem.tsx
src/features/add-attachment/api/: useCreateUrlAttachment.ts
src/features/create-task/api/: useCreateTask.ts
src/pages/: PalettePage.css  PalettePage.tsx  SettingsPage.css  SettingsPage.tsx  TodayPage.css  TodayPage.tsx
src/shared/api/: tauri.ts  useAppMutation.ts
src/shared/lib/: dateUtils.ts  logger.ts
src/shared/ui/: Button.tsx  Input.tsx
src/stores/: uiStore.ts
src/widgets/project-list/: ProjectList.css  ProjectList.tsx
src/widgets/reminder-list/: ReminderList.css  ReminderList.tsx
src/widgets/task-detail-view/: TaskDetailView.css  TaskDetailView.tsx
src/widgets/task-list/: TaskList.css  TaskList.tsx
(+36 files in other folders)
