[package]
name = "momentum"
version = "0.1.0"
description = "Momentum: An open-source desktop to-do app for keyboard-centric users."
authors = ["vastea"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "momentum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 用于操作 SQLite 数据库
rusqlite = { version = "0.37.0", features = ["bundled"] }
# 用于处理时间和日期
chrono = { version = "0.4", features = ["serde"] }
# 用于提供更方便、更强大的错误处理
anyhow = "1.0"
thiserror = "2.0"
ts-rs = { version = "11.0.1", features = ["chrono-impl"] }
log = "0.4"
